# rvv-intrinsic-emulation

./: LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: generate.yml
bench/: bench_vror.c
include/: zvbb_emu.h
scripts/: ci_generate_all.sh  generate_bench.py  generate_emulation.py  rie_generator.py  rvv_intrinsic_emulation_gen.py  zvbb_emulation.py
src/rie_generator/: __init__.py  core.py  description_helper.py  zvabd_emulation.py  zvbb_emulation.py  zvdot4a8i_emulation.py  zvdota_emulation.py  zvkb_emulation.py  zvzip_emulation.py
tests/: test_vror.c
tests/src/: bench_all.c  test_zvdot4a8i.c  test_zvzip.c
tests/unit/: test_lmul_is_valid_for_eew.py
